# apachebeam

./: .bash_history  .dockerignore  Dockerfile  Makefile  apachebeam_metadata  pyproject.toml  setup.py
src/apachebeam/: first.py  second.py
src/apachebeam/utils/: common_functions.py
tests/: test_apachebeam.py
