[tool.poetry]
name = "apachebeam"
version = "0.1.0"
description = ""
authors = ["kev-pinto-cts <kev.pinto@cts.co>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
apache-beam = "2.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
